index.html: Add Download Links & Source Changelogs
Signed-off-by: Edwiin kusuma jaya <kutemeikito0905@gmail.com>

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center justify-content-center hero-text" data-aos="zoom-out">
       <h1>WELCOME TO RYZEN KERNEL</h1>
-      <a href="./download.html" class="btn-get-started scrollto">Download</a>
+      <a href="https://sourceforge.net/projects/ryzen-kernel/files/" class="btn-get-started scrollto">Download</a>
+	    <a href="https://t.me/ryznkernellogs" class="btn-get-started scrollto">Changelogs</a>
       <img src="assets/img/header/top1-img.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
     </div>
 
